<resources>
    <string name="app_name">Wearables</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="player_created">Player created</string>
    <string name="player_updated">Player updated</string>
    <string name="team_created">Team created</string>
    <string name="team_updated">Team updated</string>
    <string name="match_created">Match created</string>
    <string name="match_updated">Match updated</string>
    <string name="registered_action">%1$s</string>
    <string name="pick_team">Pick team</string>
    <string name="pick_player">Pick player</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="configure_devices">Configure devices</string>
    <string name="start_recording">Start recording</string>
    <string name="don_t_ask">Don\'t ask</string>
    <string name="select_action_for_the_gesture">Select action for the gesture</string>
    <string name="select_team_for_the_gesture">Select team for the gesture</string>
    <string name="select_player_for_the_gesture">Select player for the gesture</string>
    <string name="done">Done</string>
    <string name="try_again">Try again</string>
    <string name="connection_with_device_failed">Connection with device failed.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="location_permission_message">Starting from Android M (6.0), the system requires apps to be granted location access in order to scan for BLE devices.</string>
    <string name="ok">Ok</string>
    <string name="ble_scan_requires_location">BLE scan requires location</string>
    <string name="ble_scan_requirement_message">Turn on Location in the settings to see scan results</string>
    <string name="info">Info</string>
    <string name="reset_config_message">Gesture configuration for devices which are saved for teams which are not playing in the match has been reset.</string>
    <string name="warning">Warning</string>
    <string name="exit_recording_message">If you left this screen the statistics recording will be finished. Do you want to exit?</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="other_info">Other info</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="players">Players</string>
    <string name="no_matches_to_display">No matches to display</string>
    <string name="_0">0</string>
    <string name="sign_between_score">-</string>
    <string name="app_info_design">Design  -  Ana-Maria STOICHITOIU</string>
    <string name="app_info_gesture">Gesture recognition -  Piotr Łaszkiewicz</string>
    <string name="app_info_mobile">Mobile application  -  Łukasz Witkowski</string>
    <string name="app_info_smartwatch">Smartwatch application  -  Rasmus Hartung Sørensen</string>
    <string name="eps_valencia_2021">EPS Valencia 2021</string>
    <string name="update_team">Update Team</string>
    <string name="update_player">Update Player</string>
    <string name="update_match">Update Match</string>
</resources>