<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    tools:context=".ui.dialogs.ConfigureGestureDialogFragment">

    <Button
        android:id="@+id/done_config_gesture_bn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/done"
        android:textColor="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/do_not_ask_about_player_cb" />

    <TextView
        android:id="@+id/config_gesture_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gesture 9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/gesture_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/gesture_iv"
        app:layout_constraintTop_toBottomOf="@+id/gesture_iv" />

    <ImageView
        android:id="@+id/gesture_iv"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/gesture_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_action_tf"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/select_action_for_the_gesture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_gesture_name_tv">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/grey_light" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_team_for_gesture_tf"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_team_for_the_gesture"
        app:layout_constraintEnd_toStartOf="@+id/do_not_ask_about_team_cb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/select_action_tf"
        app:layout_constraintTop_toBottomOf="@+id/select_action_tf">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/grey_light" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_player_for_gesture_tf"
        style="@style/TextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/select_player_for_the_gesture"
        app:layout_constraintEnd_toStartOf="@+id/do_not_ask_about_player_cb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_team_for_gesture_tf">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/grey_light" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/do_not_ask_about_player_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/grey_light"
        android:text="@string/don_t_ask"
        android:textColor="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="@+id/select_player_for_gesture_tf"
        app:layout_constraintEnd_toEndOf="@+id/do_not_ask_about_team_cb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_player_for_gesture_tf"
        app:layout_constraintTop_toTopOf="@+id/select_player_for_gesture_tf" />

    <CheckBox
        android:id="@+id/do_not_ask_about_team_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/grey_light"
        android:text="@string/don_t_ask"
        android:textColor="@color/grey_light"
        app:layout_constraintBottom_toBottomOf="@+id/select_team_for_gesture_tf"
        app:layout_constraintEnd_toEndOf="@+id/select_action_tf"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_team_for_gesture_tf"
        app:layout_constraintTop_toTopOf="@+id/select_team_for_gesture_tf" />

</androidx.constraintlayout.widget.ConstraintLayout>